--- a/styles/custom.css
+++ b/styles/custom.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Karla&display=swap");
-@import "@fortawesome/fontawesome-free/css/all.min.css";
-* {
+body {
   font-family: "Karla", sans-serif !important;
 }
 
