--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -73,12 +73,12 @@ a {
 }
 
 .footer-customs{
-    background-color: $blue-900 !important;
-    color: #CFEEEB!important;
+    background-color: #F8F9FA !important;
+    color: $blue-700!important;
 }
 
 .text-final-footer{
-    color: #6FCBC2;
+    color: $blue-700;
 }
 
 .hover-custom :hover{
@@ -173,3 +173,35 @@ a {
   .maximo { grid-area: maximo; }
   
   .guion { grid-area: guion; }
+
+  .inputfile-5 + label {
+    color: #c39f77!important;
+}
+
+.inputfile-5:focus + label,
+.inputfile-5.has-focus + label,
+.inputfile-5 + label:hover {
+    color: #9f8465;
+}
+
+.inputfile-5 + label figure {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #c39f77;
+    display: block;
+    padding: 20px;
+    margin: 0 auto 10px;
+}
+
+.inputfile-5:focus + label figure,
+.inputfile-5.has-focus + label figure,
+.inputfile-5 + label:hover figure {
+    background-color: #9f8465;
+}
+
+.inputfile-5 + label svg {
+    width: 100%;
+    height: 100%;
+    fill: #fff;
+}
