--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -205,3 +205,12 @@ a {
     height: 100%;
     fill: #fff;
 }
+
+
+
+.ImageUpload{
+    img:hover{
+        background-color: rgba(255, 255, 255, 0.371);
+
+    }
+}
